# vault-client

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  types.in.rs
tests/: test.rs
